--- a/mb/sass/blocks/breadcrumbs.scss
+++ b/mb/sass/blocks/breadcrumbs.scss
@@ -44,10 +44,83 @@
   }
 }
 
+.breadcrumbs__filter {
+  display: none;
+}
+
+.breadcrumbs__list {
+  display: none !important;
+}
+
 @media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {
   .breadcrumbs {
     display: none;
+    
+    &--strategy {
+      margin: 3px 0 0 0;
+      
+      h1 {
+        font-size: 21px;
+      }
+      
+      ul {
+        display: none;
+      }
+    }
+    
+    &--inner {
+      position: relative;
+    }
+  }
+  
+  .breadcrumbs--strategy {
+    display: block;
+  }
+  
+  .breadcrumbs__filter {
+    display: block;
+    padding: 5px 10px 5px 30px;
+    font-size: 14px;
+    font-family: 'ProximaNovaLight', sans-serif;
+    border: 1px solid $mc;
+    border-radius: 5px;
+    background: transparent url('../img/eq.png') no-repeat left;
+    background-position-x: 10px;
+  }
+  
+  .breadcrumbs__list {
+    position: absolute;
+    // top: 0;
+    left: 0;
+    width: 100%;
+    margin: 0;
+    display: flex !important;
+    flex-direction: column;
+    background: #fff;
+    box-shadow: 0.839px 0.545px 8.73px 0.27px rgba(0, 1, 1, 0.21);
+    transition: 0.5s;
+    
+    li {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      // margin: 10px 0 !important;
+      padding: 10px 0;
+      border-bottom: 1px solid #ddd;
+      
+      select {
+        margin: 10px 0 0 0;
+      }
+    }
+    
+    &--closed {
+      top: -500px;
+    }
+    
+    &--opened {
+      top: 160px;
+    }
   }
 }
