--- a/mb/sass/blocks/range.scss
+++ b/mb/sass/blocks/range.scss
@@ -182,6 +182,20 @@
   }
   
   .range__left {
-    margin: 0 0 50px 0;
+    margin: 40px 0 50px 0;
+  }
+  
+  .range__invest {
+    
+    &::before {
+      width: 295px;
+    }
+  }
+
+  .range__get {
+    
+    &::before {
+      width: 295px;
+    }
   }
 }
