--- a/mb/css/style.css
+++ b/mb/css/style.css
@@ -226,7 +226,9 @@ body {
   padding: 20px;
   background: #fff;
   -webkit-transition: 0.5s;
-  transition: 0.5s; }
+  transition: 0.5s;
+  -webkit-box-shadow: 0.1px 2px 2px 0 rgba(0, 1, 1, 0.2);
+  box-shadow: 0.1px 2px 2px 0 rgba(0, 1, 1, 0.2); }
   .nav__register ul {
     display: -webkit-box;
     display: -ms-flexbox;
