--- a/mb/sass/blocks/nav.scss
+++ b/mb/sass/blocks/nav.scss
@@ -92,6 +92,7 @@
   padding: 20px;
   background: #fff;
   transition: 0.5s;
+  box-shadow: 0.1px 2px 2px 0 rgba(0,1,1,.2);
   
   ul {
     display: flex;
