--- a/forexglobal/sass/style.scss
+++ b/forexglobal/sass/style.scss
@@ -11,5 +11,5 @@
 @import 'blocks/account';
 @import 'blocks/tabs';
 @import 'blocks/form';
-// @import 'blocks/payment';
+@import 'blocks/payment';
 @import 'blocks/footer';
