--- a/forexglobal/sass/blocks/title.scss
+++ b/forexglobal/sass/blocks/title.scss
@@ -5,7 +5,9 @@
 }
 
 .title__name {
-  margin: 260px 0 95px 0;
+  // margin: 260px 0 95px 0;
+  margin: 0;
+  padding: 395px 0 95px 0;
   color: #fff;
   font-size: 65px;
   font-weight: 300;
