--- a/forexglobal/sass/blocks/nav.scss
+++ b/forexglobal/sass/blocks/nav.scss
@@ -2,9 +2,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.nav {
   padding: 18px 15px;
 }
 
@@ -43,6 +40,8 @@
 
 .nav__search {
   position: relative;
+  top: 0;
+  transition: 0.5s;
   
   input {
     width: 470px;
