--- a/option/sass/blocks/footer.scss
+++ b/option/sass/blocks/footer.scss
@@ -126,6 +126,10 @@
   }
 }
 
+.footer__right--text {
+  display: none;
+}
+
 @media screen and ($tablet-widths) {
   .footer__left {
     width: 200px;
@@ -137,11 +141,18 @@
   .footer__flex {
     flex-direction: column;
     align-items: center;
+    
+    &--social {
+      padding: 110px 0;
+      background: url('../img/footer-logo-m.png') no-repeat center;
+      background-size: 270px;
+    }
   }
   
-  .footer__logo {
-    width: 300px;
-    height: auto;
+  .footer__logo,
+  .footer__left,
+  hr {
+    display: none;
   }
   
   .footer__middle {
@@ -149,8 +160,22 @@
   }
   
   .footer__right {
+    display: none;
     padding: 0;
     text-align: center;
     background: none;
+    
+    &--text {
+      display: block;
+      background: url('../img/footer-mockup.png') no-repeat bottom right;
+      background-position-y: 30px; 
+      
+      a {
+        
+        &:nth-child(2) {
+          margin: 50px 0 15px 0;
+        }
+      }
+    }
   }
 }
