--- a/option/sass/blocks/title.scss
+++ b/option/sass/blocks/title.scss
@@ -54,7 +54,9 @@
 
 @media screen and ($mobile-widths) {
   .title {
-    padding: 30px 0 70px 0;
+    padding: 30px 0;
+    background: #260d2f url('../img/title-bg-m.jpg') no-repeat top;
+    background-size: cover;
   }
   
   .title__wrapper {
@@ -69,13 +71,14 @@
   }
   
   .title__name {
-    margin: 50px 0;
+    margin: 170px 0 0 0;
     font-size: 30px;
     text-align: center;
   }
   
   .title__text {
-    font-size: 25px;
+    margin: 0 0 20px 0;
+    font-size: 14px;
     text-align: center;
   }
   
@@ -84,7 +87,7 @@
     width: 250px;
     margin: 0 auto;
     padding: 15px 0;
-    font-size: 16px;
+    font-size: 20px;
     text-align: center;
   }
 }
